--- a/.github/workflows/deploy-Cloud-run.yml
+++ b/.github/workflows/deploy-Cloud-run.yml
@@ -1,27 +1,29 @@
 name: Deploy to Cloud Run
 
 on:
-  workflow_dispatch: # Дозволяє вручну запускати workflow
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3  # Оновлено до v3
 
-      - name: Set up Google Cloud CLI
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }} # Використовуємо секрет
-          project_id: dotted-music-435509-q2
-          export_default_credentials: true
+    - name: Setup Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2  # Оновлено до v2
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
 
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy app \
-            --image us-docker.pkg.dev/dotted-music-435509-q2/app-repo/app \
-            --platform managed \
-            --region us-central1 \
-            --allow-unauthenticated
+    - name: Deploy to Cloud Run
+      run: |
+        gcloud run deploy app \
+          --image us-docker.pkg.dev/dotted-music-435509-q2/app-repo/app \
+          --platform managed \
+          --region us-central1 \
+          --allow-unauthenticated
