--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -3,7 +3,7 @@ name: Deploy to Cloud Run
 on:
   push:
     branches:
-      - main  # Деплой буде виконуватись при пуші в основну гілку
+      - main  # Автоматичний деплой при пуші в main
   workflow_dispatch:  # Дозволяє вручну запускати workflow
 
 jobs:
@@ -14,12 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Крок для аутентифікації в Google Cloud
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      # Налаштування Google Cloud SDK
       - name: Setup Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
       - name: Deploy to Cloud Run
         run: |
