--- a/.github/workflows/setup-gcp-environment.yml
+++ b/.github/workflows/setup-gcp-environment.yml
@@ -18,20 +18,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v2
+    - name: Authenticate with Google Cloud
+      uses: google-github-actions/auth@v0
       with:
-        project_id: ${{ github.event.inputs.gcp_project_id }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        export_default_credentials: true
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+    - name: Set up Google Cloud SDK
+      run: |
+        echo "Setting up Google Cloud SDK..."
+        gcloud config set project ${{ github.event.inputs.gcp_project_id }}
 
     - name: Configure GitHub secrets and variables
       run: |
         echo "Setting up environment variables for ${{ github.event.inputs.environment_name }}..."
         echo "GCP_PROJECT_ID=${{ github.event.inputs.gcp_project_id }}" >> $GITHUB_ENV
-        echo "SERVICE_ACCOUNT_KEY=${{ secrets.GCP_SA_KEY }}" >> $GITHUB_ENV
 
     - name: Verify GCP setup
       run: |
-        gcloud config set project ${{ github.event.inputs.gcp_project_id }}
         gcloud auth list
