--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -26,6 +26,11 @@ jobs:
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
+      # Вивід змінних для перевірки
+      - name: Print environment variables
+        run: |
+          echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}"
+
       - name: Deploy to Cloud Run
         run: |
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}  # Встановлюємо проект
