--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -1,41 +1,30 @@
 name: Deploy to Cloud Run
 
 on:
-  push:
-    branches:
-      - main  # Автоматичний деплой при пуші в main
-  workflow_dispatch:  # Дозволяє вручну запускати workflow
+  workflow_run:
+    workflows: ["Setup GCP Environment"]  # Ім'я першого воркфлоу
+    types:
+      - completed
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      # Крок для аутентифікації в Google Cloud
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+    - name: Authenticate with Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      # Налаштування Google Cloud SDK
-      - name: Setup Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      # Вивід змінних для перевірки
-      - name: Print environment variables
-        run: |
-          echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}"
-
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}  # Встановлюємо проект
-          gcloud run deploy app \
-            --image us-docker.pkg.dev/dotted-music-435509-q2/app-repo/app \
-            --platform managed \
-            --region us-central1 \
-            --allow-unauthenticated
+    - name: Deploy to Cloud Run
+      run: |
+        echo "Deploying to Cloud Run..."
+        gcloud run deploy your-service-name \
+          --image gcr.io/${{ github.event.inputs.gcp_project_id }}/your-image-name:latest \
+          --platform managed \
+          --region us-central1 \
+          --set-secrets GCP_SA_KEY=${{ github.event.inputs.environment_name }}/GCP_SA_KEY \
+          --set-secrets GCP_PROJECT_ID=${{ github.event.inputs.environment_name }}/GCP_PROJECT_ID
